update : added is Active status with endpoints
