# src/api/model/index.ts
@@ -25,6 +25,7 @@ export * from "./fieldQuestion";
 export * from "./fieldResultsResponse";
 export * from "./fieldType";
 export * from "./form";
+export * from "./formActiveStatusResponse";
 export * from "./formField";
 export * from "./formFieldFieldType";
 export * from "./formFieldFormFieldType";
@@ -113,11 +114,14 @@ export * from "./submissionData";
 export * from "./submissionFieldResponse";
 export * from "./submissionOfAnswer";
 export * from "./submissionResponse";
+export * from "./submissionResponseCount";
 export * from "./submissionsSummaryResponse";
 export * from "./summaryItem";
 export * from "./textMeta";
 export * from "./textQuestionResponse";
 export * from "./tokens";
+export * from "./updateFormResponseStatusRequest";
+export * from "./updateFormResponseStatusResponse";
 export * from "./uploadFormImages201";
 export * from "./uploadFormImagesBody";
 export * from "./user";
@@ -128,4 +132,3 @@ export * from "./userOrgId";
 export * from "./userRolesResponse";
 export * from "./usersByOrgResponse";
 export * from "./usersByOrgResponseUsers";
-export * from "./submissionResponseCount";
